@@ -1,5 +1,10 @@
 # $Id$
 
+2006-10-31	Dmitry E. Demidov
+
+	* main/Utils/TuringTest/TuringImage.class.php: added ability 
+	generate IMG_WBMP
+
 2006-10-25	Anton E. Lebedevich
 
 	* test/core/LogicTest.class.php: added tests for LogicalExpression.
